# faptopia

./: .gitignore  CLAUDE.md  Cargo.toml  readme.md
.github/workflows/: release.yml
.kiro/specs/http-server-api/: design.md  requirements.md  tasks.md
.kiro/specs/tab-management-and-drag-drop/: design.md  requirements.md  tasks.md
src/: main.rs  server.rs
templates/: gallery.html  script.js  styles.css
