[package]
name = "faptopia"
version = "0.1.0"
edition = "2021"

[dependencies]
ureq = { version = "2.12.1", features = ["json"] }
scraper = "0.12"
clap = { version = "4.5.38", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
once_cell = "1.21.3"
maud = "0.25"
pulldown-cmark = "0.10.0" 